[package]
name = "rustools"
version = "0.1.0"
authors = ["Wei Zhong <zhongwei99@163.com>"]
keywords = ["rocket", "clap", "cli", "web", "server"]

[badges]
travis-ci = { repository = "zhongwei/rustools" }
appveyor = { repository = "zhongwei/rustools" }

[lib]
name = "rustools"
path = "src/lib.rs"

[[bin]]
name = "rt"
path = "src/bin/rustools.rs"

[[test]]
name = "test"
path = "tests/rustools.rs"

[[example]]
name = "example"
path = "examples/rustools.rs"

[[bench]]
name = "bench"
path = "benches/rustools.rs"

[features]

[dependencies]
clap = {version = "2", features=["yaml"]}
rocket = "0.3.3"
rocket_codegen = "0.3.3"

